--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,10 @@ body {
     overflow: hidden;
     font-family: 'Poppins', sans-serif;
 }
+
+.scene,
+canvas {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
