--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,120 @@
     box-sizing: border-box;
 }
 
+:root {
+    --black:#333;
+    --white:#e9e8e6;
+    --akzent:#579f47;
+}
+
+.dark {
+    --black:#e9e8e6;
+    --white:#333;
+    --akzent:#EFBC0F;
+}
+
 body {
     overflow: hidden;
     font-family: 'Poppins', sans-serif;
+    background-color: var(--white);
 }
+
+header {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 40px 100px;
+    z-index: 10;
+}
+
+
+header .logo {
+    position: relative;
+    display: inline-flex;
+    color: var(--black);
+    text-decoration: none;
+    font-size: 2em;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.header-right {
+    display: flex;
+}
+
+.btn {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.btn i {
+    font-size: 2em;
+    color: var(--black);
+}
+
+.btn .menuToggle {
+    font-size: 3em;
+}
+
+/* blendet die beiden zweiten Buttons aus */
+.btn i:nth-child(2) {
+    display: none;
+}
+
+.btn.active i:nth-child(2){
+    display: block;
+}
+
+.btn.active i:nth-child(1){
+    display: none;
+}
+
+.navigation {
+    position: absolute;
+    top: 0;
+    /*left: 0; <- zentriert das Menü im Hauptscreen (erster Layer durch z-index)*/
+    left: -100%; /*schiebt das Menü nach Links*/
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--white);
+    z-index: 4;
+    flex-direction: column;
+    transition: 0.5s;
+}
+
+.navigation.active {
+    left: 0;
+}
+
+.navigation li {
+    list-style: none;
+}
+
+.navigation li a{
+    display: inline-flex;
+    margin: 5px 0;
+    font-size: 1.35em;
+    text-decoration: none;
+    color: var(--black);
+    padding: 5px 20px;
+}
+
+.navigation li a:hover{
+    background: var(--akzent);
+    color: var(--white);
+}
+
 
 .scene,
 canvas {
