--- a/css/style.css
+++ b/css/style.css
@@ -1,128 +1,135 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --black:#333;
-    --white:#e9e8e6;
-    --akzent:#579f47;
+  --black: #333;
+  --white: #d4d4d4;
+  --akzent: #579f47;
 }
 
 .dark {
-    --black:#e9e8e6;
-    --white:#333;
-    --akzent:#EFBC0F;
+  --black: #d4d4d4;
+  --white: #333;
+  --akzent: #efbc0f;
 }
 
 body {
-    overflow: hidden;
-    font-family: 'Montserrat', sans-serif;
-    background-color: var(--white);
+  overflow: hidden;
+  font-family: "Montserrat", sans-serif;
+  background-color: var(--white);
 }
 
 header {
-    position: absolute;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 40px 100px;
-    z-index: 10;
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 40px 100px;
+  z-index: 10;
 }
 
-
 header .logo {
-    position: relative;
-    display: inline-flex;
-    color: var(--black);
-    text-decoration: none;
-    font-size: 2em;
-    font-weight: 700;
-    text-transform: uppercase;
+  position: relative;
+  display: inline-flex;
+  color: var(--black);
+  text-decoration: none;
+  font-size: 2em;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .header-right {
-    display: flex;
+  display: flex;
+}
+
+header img {
+  width: 200px;
+}
+
+header .logo-img {
+  filter: invert(0%) sepia(0%) saturate(7484%) hue-rotate(59deg) brightness(10%)
+    contrast(104%);
 }
 
 .btn {
-    position: relative;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    margin-left: 10px;
+  position: relative;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-left: 10px;
 }
 
 .btn i {
-    font-size: 2em;
-    color: var(--black);
+  font-size: 2em;
+  color: var(--black);
 }
 
 .btn .menuToggle {
-    font-size: 3em;
+  font-size: 3em;
 }
 
 /* blendet die beiden zweiten Buttons aus */
 .btn i:nth-child(2) {
-    display: none;
+  display: none;
 }
 
-.btn.active i:nth-child(2){
-    display: block;
+.btn.active i:nth-child(2) {
+  display: block;
 }
 
-.btn.active i:nth-child(1){
-    display: none;
+.btn.active i:nth-child(1) {
+  display: none;
 }
 
 .navigation {
-    position: absolute;
-    top: 0;
-    /*left: 0; <- zentriert das Menü im Hauptscreen (erster Layer durch z-index)*/
-    left: -100%; /*schiebt das Menü nach Links*/
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: var(--white);
-    z-index: 4;
-    flex-direction: column;
-    transition: 0.5s;
+  position: absolute;
+  top: 0;
+  /*left: 0; <- zentriert das Menü im Hauptscreen (erster Layer durch z-index)*/
+  left: -100%; /*schiebt das Menü nach Links*/
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--white);
+  z-index: 4;
+  flex-direction: column;
+  transition: 0.5s;
 }
 
 .navigation.active {
-    left: 0;
+  left: 0;
 }
 
 .navigation li {
-    list-style: none;
+  list-style: none;
 }
 
-.navigation li a{
-    display: inline-flex;
-    margin: 5px 0;
-    font-size: 1.35em;
-    text-decoration: none;
-    color: var(--black);
-    padding: 5px 20px;
+.navigation li a {
+  display: inline-flex;
+  margin: 5px 0;
+  font-size: 1.35em;
+  text-decoration: none;
+  color: var(--black);
+  padding: 5px 20px;
 }
 
-.navigation li a:hover{
-    background: var(--akzent);
-    color: var(--white);
+.navigation li a:hover {
+  background: var(--akzent);
+  color: var(--white);
 }
-
 
 .scene,
 canvas {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
