--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,20 @@ header .logo-img {
   box-shadow: 1px 0px 15px 1px rgba(0, 0, 0, 0.5);
 }
 
+.content-wrapper .content .content-text {
+  /*background-color: aquamarine;*/
+  width: 70%;
+  height: 100%;
+}
+
+.content-wrapper .content .content-text h1 {
+  font-weight: 800;
+  padding: 30px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 2.5em;
+}
+
 .scene,
 canvas {
   position: absolute;
