--- a/css/style.css
+++ b/css/style.css
@@ -164,25 +164,18 @@ header .logo-img {
   border-radius: 20px;
   -webkit-box-shadow: 1px 0px 15px 1px rgba(0, 0, 0, 0.5);
   box-shadow: 1px 0px 15px 1px rgba(0, 0, 0, 0.5);
+  display: flex;
 }
 
 .content-wrapper .content .content-text {
-  /*background-color: aquamarine;*/
-  width: 70%;
+  width: 50%;
   height: 100%;
 }
 
-.content-wrapper .content .content-text h1 {
-  font-weight: 800;
-  padding: 30px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: 2.5em;
-}
+
 
 .scene,
 canvas {
-  position: absolute;
-  width: 100%;
+  width: 50%;
   height: 100%;
 }
