--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,21 @@ header .logo-img {
   height: 100%;
 }
 
+.content-wrapper .content .content-text h1 {
+  font-weight: 800;
+  padding-left: 40px;
+  padding-top: 120px;
+  padding-bottom:20px ;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 2.4em;
+}
 
+.content-wrapper .content .content-text p {
+  font-weight: 300;
+  padding-left: 60px;
+  font-size: 1em;
+}
 
 .scene,
 canvas {
