--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,9 @@ header .logo-img {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 2.4em;
+  text-decoration: underline;
+  text-decoration-color: #ffb800;
+  text-decoration-thickness: 6px;
 }
 
 .content-wrapper .content .content-text p {
