--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,12 @@ header .logo-img {
   font-size: 1em;
 }
 
+#product-headline {
+  font-weight: 800;
+  font-size: 1.2em;
+  padding-top: 30px;
+}
+
 .scene,
 canvas {
   width: 50%;
