--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,13 @@ header .logo-img {
   padding-top: 30px;
 }
 
+#price {
+  font-weight: 400;
+  font-size: 1.2em;
+  padding-top: 5px;
+  color: rgb(150, 150, 150);
+}
+
 .scene,
 canvas {
   width: 50%;
