add button background

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,10 @@
 }
 
 :root {
-  --black: #d89c04;
-  --white: white;
+  --nav-color:#df9100;
+  --shinewhite: white;
+  --black: #333;
+  --white: #d4d4d4;
   --akzent: #efbc0f;
   --navigation: #ffb800;
   --navigation: linear-gradient(
@@ -20,8 +22,10 @@
 }
 
 .dark {
+  --nav-color:white;
+  --shinewhite:#01011d;
   --black: #d4d4d4;
-  --white: black;
+  --white: #333;
   --akzent: #efbc0f;
   background: rgb(2,0,36);
   background: linear-gradient(312deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 66%, rgba(0,67,120,1) 100%); 
@@ -87,13 +91,13 @@ header .logo-img {
   align-items: center;
   cursor: pointer;
   margin-left: 10px;
-  background-color: var(--white);
+  background-color: var(--shinewhite);
   border-radius: 50%;
 }
 
 .btn i {
   font-size: 2em;
-  color: var(--black);
+  color: var(--nav-color);
 }
 
 .btn .menuToggle {
