--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,24 @@
+@media only screen and (max-width: 1020px) {
+  .medium-circle {
+   display: none;
+  }
+  .small-circle {
+    display: block;
+    opacity: 0.2;
+    transform: rotate(180deg);
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .medium-circle {
+   display: none;
+  }
+  .small-circle {
+    display: none;
+  }
+}
+
+
 @media only screen and (max-width: 700px) {
   header {
     justify-content: space-between;
