--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-  --nav-color:#df9100;
+  --nav-color: #df9100;
   --shinewhite: rgba(255, 255, 255, 0.5);
   --black: #333;
   --white: #d4d4d4;
@@ -18,24 +18,33 @@
     rgba(215, 155, 0, 0.8) 50%,
     rgba(255, 235, 0, 0.8) 100%
   );
-  --content:#f5f5f5;
+  --content: #f5f5f5;
   --underline: #ffb800;
 }
 
 .dark {
-  --nav-color:white;
-  --shinewhite:#01011d;
+  --nav-color: white;
+  --shinewhite: #01011d;
   --black: #d4d4d4;
   --white: #333;
   --akzent: #efbc0f;
-  background: rgb(2,0,36);
-  background: linear-gradient(312deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 66%, rgba(0,67,120,1) 100%); 
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    312deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 66%,
+    rgba(0, 67, 120, 1) 100%
+  );
   --navigation: #090979;
-  --navigation: linear-gradient(312deg, rgba(2,0,36,0.8) 0%, rgba(9,9,121,0.8) 66%, rgba(0,67,120,0.8) 100%);
+  --navigation: linear-gradient(
+    312deg,
+    rgba(2, 0, 36, 0.8) 0%,
+    rgba(9, 9, 121, 0.8) 66%,
+    rgba(0, 67, 120, 0.8) 100%
+  );
   --content: #f5f5f5;
   --underline: #090979;
 }
-
 
 body {
   overflow: hidden;
@@ -49,7 +58,6 @@ body {
     rgba(255, 235, 0, 0.3029586834733894) 100%
   );
 }
-
 
 header {
   position: absolute;
@@ -198,7 +206,7 @@ header .logo-img {
   font-weight: 800;
   padding-left: 40px;
   padding-top: 120px;
-  padding-bottom:20px ;
+  padding-bottom: 20px;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 2vw;
@@ -210,7 +218,7 @@ header .logo-img {
 .content-wrapper .content .content-text p {
   font-weight: 300;
   padding-left: 60px;
-  font-size: 1vw;
+  font-size: 0.9vw;
 }
 
 #product-headline {
