--- a/css/style.css
+++ b/css/style.css
@@ -239,3 +239,45 @@ canvas {
   width: 50%;
   height: 100%;
 }
+
+#myProgress {
+  width: 100%;
+  background-color: #ddd;
+}
+
+#myBar {
+  width: 1%;
+  height: 5px;
+  background-color: var(--underline);
+}
+
+.progress-area {
+  width: 60%;
+  margin-left: 60px;
+  padding: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  background-color: rgb(240, 240, 240);
+  margin-right: 20px;
+}
+
+.progress-bar {
+  width: 100%;
+  padding-top: 8px;
+}
+
+#sold {
+  font-weight: 100;
+  font-size: 0.8vw;
+  color: rgb(94, 94, 94);
+  text-align: left;
+}
+
+.info {
+  width: 100%;
+  display: flex;
+}
