--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@
   );
   --content: #f5f5f5;
   --underline: #ffb800;
+  --addcart: #ffa600;
+  --addcarthover: #ffc124;
 }
 
 .dark {
@@ -44,6 +46,8 @@
   );
   --content: #f5f5f5;
   --underline: #090979;
+  --addcart: #090979;
+  --addcarthover: #1a1a74;
 }
 
 body {
@@ -280,4 +284,214 @@ canvas {
 .info {
   width: 100%;
   display: flex;
+}
+
+.add-to-cart {
+  --color: #fff;
+  --cart: #fff;
+  --background: var(--addcart);
+  --shadow: rgba(0, 9, 61, 0.16);
+  cursor: pointer;
+  position: relative;
+  outline: none;
+  border: 1px solid rgb(184, 184, 184);
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  font-size: 1vw;
+  border-radius: 8px;
+  padding: 20px;
+  font-weight: 500;
+  line-height: 20px;
+  transform: scale(var(--s, 0.97));
+  box-shadow: 0 var(--s-y, 4px) var(--s-b, 12px) var(--shadow);
+  color: var(--color);
+  background: var(--background);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+.add-to-cart .default {
+  position: relative;
+  opacity: var(--o, 1);
+  transform: scale(var(--s, 1));
+  transition: transform 0.3s, opacity 0.3s;
+  transition-delay: var(--d, 0.3s);
+}
+.add-to-cart .default:before,
+.add-to-cart .default:after {
+  content: "";
+  width: 2px;
+  height: 12px;
+  left: 0;
+  top: 4px;
+  border-radius: 1px;
+  position: absolute;
+  transform: rotate(var(--r, 0deg));
+  transition: transform 0.25s;
+}
+.add-to-cart .default:after {
+  --r: 90deg;
+}
+.add-to-cart .success {
+  opacity: var(--o, 0);
+  transform: translate(-50%, var(--y, 12px));
+  position: absolute;
+  top: 28px;
+  left: 50%;
+  transition: opacity 0.3s, transform 0.3s;
+  transition-delay: var(--d, 0s);
+}
+
+.add-to-cart .cart {
+  position: absolute;
+  left: 0;
+  top: 15px;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  border-radius: inherit;
+  overflow: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
+}
+.add-to-cart .cart:before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 16px;
+  background: var(--background);
+  top: 17px;
+  right: 100%;
+  z-index: 1;
+  margin-right: -10px;
+  transform: translateX(-18px) rotate(-16deg);
+}
+.add-to-cart .cart > div {
+  top: 13px;
+  right: 100%;
+  transform: translateX(-18px) rotate(-16deg);
+  position: absolute;
+  z-index: 2;
+  transform-origin: 1px 21px;
+}
+.add-to-cart .cart > div:before,
+.add-to-cart .cart > div:after {
+  content: "";
+  position: absolute;
+  top: var(--t, 4px);
+  left: var(--l, 0);
+  height: 2px;
+  width: var(--w, 18px);
+  background: var(--cart);
+  border-radius: 1px;
+}
+.add-to-cart .cart > div:after {
+  --w: 16px;
+  --t: 14px;
+  --l: 1px;
+}
+.add-to-cart .cart > div > div {
+  width: 2px;
+  height: var(--h, 15px);
+  border-radius: 1px;
+  transform: rotate(var(--r, -8deg));
+  background: var(--cart);
+  position: relative;
+}
+.add-to-cart .cart > div > div:before,
+.add-to-cart .cart > div > div:after {
+  content: "";
+  position: absolute;
+  background: inherit;
+}
+.add-to-cart .cart > div > div:after {
+  width: 4px;
+  height: 4px;
+  border-radius: 2px;
+  bottom: var(--b, -6px);
+  left: var(--l, 0);
+}
+.add-to-cart .cart > div > div:first-child:before {
+  border-radius: inherit;
+  top: 0;
+  right: 0;
+  height: 2px;
+  width: 6px;
+  transform-origin: 5px 1px;
+  transform: rotate(16deg);
+}
+.add-to-cart .cart > div > div:last-child {
+  --h: 12px;
+  --r: 8deg;
+  position: absolute;
+  left: 16px;
+  bottom: -1px;
+}
+.add-to-cart .cart > div > div:last-child:after {
+  --l: -2px;
+  --b: -5px;
+}
+.add-to-cart.added .default {
+  --o: 0;
+  --s: 0.8;
+  --d: 0s;
+}
+.add-to-cart.added .default:before {
+  --r: -180deg;
+}
+.add-to-cart.added .default:after {
+  --r: -90deg;
+}
+
+.add-to-cart.added .success {
+  --o: 1;
+  --y: 0;
+  --d: 1.8s;
+}
+.add-to-cart.added .cart:before,
+.add-to-cart.added .cart > div {
+  -webkit-animation: cart 2s forwards;
+  animation: cart 2s forwards;
+}
+.add-to-cart:not(.added):hover {
+  --s: 1;
+  --s-y: 8px;
+  --s-b: 20px;
+  background-color: var(--addcarthover);
+}
+.add-to-cart:not(.added):active {
+  --s: 0.94;
+  --s-y: 2px;
+  --s-b: 6px;
+}
+
+@-webkit-keyframes cart {
+  41%,
+  49%,
+  57%,
+  60% {
+    transform: translateX(72px) rotate(0deg);
+  }
+  40%,
+  47%,
+  54% {
+    transform: translateX(72px) rotate(0deg) translateY(1px);
+  }
+  100% {
+    transform: translateX(180px) rotate(-16deg);
+  }
+}
+
+@keyframes cart {
+  41%,
+  49%,
+  57%,
+  60% {
+    transform: translateX(72px) rotate(0deg);
+  }
+  40%,
+  47%,
+  54% {
+    transform: translateX(72px) rotate(0deg) translateY(1px);
+  }
+  100% {
+    transform: translateX(180px) rotate(-16deg);
+  }
 }
