--- a/css/style.css
+++ b/css/style.css
@@ -515,13 +515,15 @@ canvas {
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
-  margin-right: 5px;
+  margin-right: 10px;
   border: 2px solid white;
 }
 
 /* Add a hover effect if you want */
 .fab:hover {
   opacity: 0.7;
+  transform: scale(1.1);
+  transition: transform 0.5s
 }
 
 /* Set a specific color for each brand */
