--- a/css/responsive.css
+++ b/css/responsive.css
@@ -38,6 +38,20 @@
     font-size: 1.3vw;
   }
 
+  .progress-area {
+    width: 60%;
+    margin-left: 20px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    background-color: rgb(240, 240, 240);
+    margin-right: 10px;
+  }
+
   .content-wrapper .content .content-text h1 {
     font-weight: 800;
     padding-left: 20px;
@@ -51,7 +65,24 @@
     text-decoration-thickness: 6px;
   }
 
+  #sold {
+    font-size: 1.5vw;
+  }
 }
+
+@media only screen and (max-width: 970px) {
+  .add-to-cart {
+    font-size: 3vw;
+  }
+
+  .content-wrapper .content {
+    margin-top: 100px;
+    width: 90vw;
+    height: 60vh;
+  }
+
+}
+
 
 @media only screen and (max-width: 800px) {
   .medium-circle {
@@ -71,19 +102,73 @@
 
   .content-wrapper .content {
     margin-top: 100px;
-    width: 85vw;
     height: 60vh;
   }
 
   .scene,
 canvas {
   width: 50%;
-  height: 80%;
+  height: 70%;
 }
+
+.progress-area {
+  margin-left: 20px;
+  padding:10px;
+}
+
 }
 
 @media only screen and (max-width: 580px) {
   header img {
     width: 100px;
   }
+   
+  .content-wrapper .content .content-text p {
+    font-weight: 300;
+    padding-left: 20px;
+    font-size: 2.2vw;
+  }
+
+  .content-wrapper .content .content-text h1 {
+    font-weight: 800;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 2.8vw;
+    text-decoration: underline;
+    text-decoration-color: var(--underline);
+    text-decoration-thickness: 6px;
+  }
+
+  #price {
+    font-weight: 400;
+    font-size: 2.5vw;
+    padding-top: 10px;
+    color: rgb(150, 150, 150);
+  }
+
+  #product-headline {
+    font-weight: 800;
+    font-size: 2.7vw;
+    padding-top: 20px;
+  }
+
+  .add-to-cart {
+    font-size: 4vw;
+  }
+  
 }
+
+@media only screen and (max-width: 370px) {
+  .progress-area{
+    display: none;
+  }
+
+  .add-to-cart {
+    margin-left: 20px;
+    font-size: 6vw;
+  }
+}
+
