--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,14 @@
   --nav-color: #df9100;
   --shinewhite: rgba(255, 255, 255, 0.5);
   --black: #333;
-  --white: #d4d4d4;
+  --white: #333;
   --akzent: #efbc0f;
   --navigation: #ffb800;
   --navigation: linear-gradient(
     40deg,
-    rgba(255, 184, 0, 0.8) 0%,
-    rgba(215, 155, 0, 0.8) 50%,
-    rgba(255, 235, 0, 0.8) 100%
+    rgba(255, 184, 0, 0.95) 0%,
+    rgba(215, 155, 0, 0.95) 50%,
+    rgba(255, 235, 0, 0.95) 100%
   );
   --content: #f5f5f5;
   --underline: #ffb800;
