add respo surface go

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -180,3 +180,10 @@
     font-size: 6vw;
   }
 }
+
+@media only screen and (max-width: 1800px) and (max-height: 1200px) {
+  .content-wrapper .content .content-text h1 {
+    padding-top: 40px;
+  }
+
+}
